--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "jsonpointer>=3.0.0",
     "jupyter>=1.1.1",
     "lab>=8.4",
-    "lifelines>=0.30.0",
+    "lifelines<0.29.0",
     "lightning-utilities>=0.15.2",
     "matplotlib-venn>=1.1.2",
     "nbdime>=4.0.2",
@@ -52,6 +52,8 @@ dependencies = [
     "wandb>=0.22.2",
     "webcolors>=24.11.1",
     "polars",
+    "unimol-tools<0.1.5",
+    "rdkit-pypi>=2022.9.5",
 ]
 
 [project.urls]
